created container class in main and div class of row

--- a/index.html
+++ b/index.html
@@ -18,3 +18,5 @@
             <h1>Weather Dashboard</h1>
         </div>
     </header>
+    <main class="container"></main>
+        <div class="row"></div>
