created search form with Search for a City label. Placeholder for styling for search bar

--- a/index.html
+++ b/index.html
@@ -20,3 +20,7 @@
     </header>
     <main class="container"></main>
         <div class="row"></div>
+        <div class=" ">
+            <form id="search-form">
+                <label class="text-primary">Search for a City:</label>
+                <input class=" " type="search" placeholder="Search" id="city-input">
