--- a/index.html
+++ b/index.html
@@ -24,3 +24,8 @@
             <form id="search-form">
                 <label class="text-primary">Search for a City:</label>
                 <input class=" " type="search" placeholder="Search" id="city-input">
+                <button class=" " type="submit" id="search-button">Enter City</button>
+            </form>
+                <button class=" " style="width: 100%" type="submit" id="clear-history-button">Clear History</button>
+                <div class="search-history" id="search-history"></div>
+        </div>
