--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Weather Dashboard</title>
+    <!-- bootstrop link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
-  
 </head>
 
 <body>
@@ -18,19 +18,41 @@
             <h1>Weather Dashboard</h1>
         </div>
     </header>
-    <main class="container"></main>
-        <div class="row"></div>
-        <div class=" ">
-            <form id="search-form">
-                <label class="text-primary">Search for a City:</label>
-                <input class=" " type="search" placeholder="Search" id="city-input">
-                <button class=" " type="submit" id="search-button">Enter City</button>
-            </form>
-                <button class=" " style="width: 100%" type="submit" id="clear-history-button">Clear History</button>
-                <div class="search-history" id="search-history"></div>
+    <main class="container">
+        <div class="row">
+
+            <div class="col-12 col-md-3">
+                <form id="search-form">
+                    <label class="text-primary">Search for a City:</label>
+                    <input class="form-control my-2 text-primary" type="search" placeholder="Search" id="city-input">
+                    <button class="btn btn-outline-primary my-2" type="submit" id="search-button">Enter City</button>
+                </form>
+
+                <button class="btn btn-primary my-2" style="width: 100%" type="submit" id="clear-history-button">Clear
+                    History</button>
+                <hr>
+                <div class="search-history" id="search-history">
+                </div>
+
+            </div>
+
+            <div class="col-md-9 col-12">
+
+                <!-- current weather display  -->
+                <div class="row present-day-weather" id="present-day-weather">
+
+                </div>
+
+                <div class="row five-day-forecast-header">5-Day Forecast:</div>
+
+                <!-- 5 day forecast display -->
+                <div class="five-day-forecast" id="five-day-forecast">
+                </div>
+            </div>
+
         </div>
     </main>
-
+    <!-- source scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
