Cleaned up margins on index.html and script.js file to make it look cleaner

--- a/index.html
+++ b/index.html
@@ -20,36 +20,22 @@
     </header>
     <main class="container">
         <div class="row">
-
             <div class="col-12 col-md-3">
                 <form id="search-form">
                     <label class="text-primary">Search for a City:</label>
                     <input class="form-control my-2 text-primary" type="search" placeholder="Search" id="city-input">
                     <button class="btn btn-outline-primary my-2" type="submit" id="search-button">Enter City</button>
                 </form>
-
-                <button class="btn btn-primary my-2" style="width: 100%" type="submit" id="clear-history-button">Clear
-                    History</button>
-                <hr>
-                <div class="search-history" id="search-history">
-                </div>
-
+                <button class="btn btn-primary my-2" style="width: 100%" type="submit" id="clear-history-button">Clear History</button>
+                <div class="search-history" id="search-history"></div>
             </div>
-
             <div class="col-md-9 col-12">
-
                 <!-- current weather display  -->
-                <div class="row present-day-weather" id="present-day-weather">
-
-                </div>
-
+                <div class="row present-day-weather" id="present-day-weather"></div>
                 <div class="row five-day-forecast-header">5-Day Forecast:</div>
-
                 <!-- 5 day forecast display -->
-                <div class="five-day-forecast" id="five-day-forecast">
-                </div>
+                <div class="five-day-forecast" id="five-day-forecast"></div>
             </div>
-
         </div>
     </main>
     <!-- source scripts -->
